--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,29 +1,36 @@
-backend:
-  name: git-gateway
-  branch: main
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <title>ניהול N-HAREDI</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+</head>
+<body>
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script>
+    var PostPreview = createClass({
+      render: function() {
+        var entry = this.props.entry;
+        var image = entry.getIn(['data', 'image']);
+        var title = entry.getIn(['data', 'title']);
+        var bg = image ? this.props.getAsset(image) : '';
 
-media_folder: "images"
-public_folder: "/images"
-
-collections:
-  - name: "blog"
-    label: "כתבות"
-    folder: "content/blog"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - { label: "כותרת", name: "title", widget: "string" }
-      - { 
-          label: "מיקום באתר", 
-          name: "layout_position", 
-          widget: "select", 
-          options: [
-            { label: "כתבה ראשית (ענקית)", value: "top" },
-            { label: "כתבה משנית (גריד)", value: "side" },
-            { label: "מבזק רץ (בפס האדום)", value: "ticker" }
-          ],
-          default: "side"
-        }
-      - { label: "תאריך", name: "date", widget: "datetime" }
-      - { label: "תמונה", name: "image", widget: "image", required: false }
-      - { label: "תוכן הכתבה", name: "body", widget: "markdown" }
+        return h('div', {style: {fontFamily: 'Assistant, sans-serif', direction: 'rtl', padding: '20px'}},
+          h('div', {style: {background: 'linear-gradient(180deg, #2847f3 0%, #17298d 65%)', padding: '20px', textAlign: 'center', borderRadius: '0 0 50% 20px/0 0 20px 20px', color: 'white'}},
+            h('h1', {style: {margin: 0}}, 'N-HAREDI')
+          ),
+          h('div', {style: {marginTop: '20px', position: 'relative', background: '#000', height: '300px', borderRadius: '5px', overflow: 'hidden'}},
+            image ? h('img', {src: bg.toString(), style: {width: '100%', height: '100%', objectFit: 'cover', opacity: '0.8'}}) : null,
+            h('div', {style: {position: 'absolute', bottom: 0, right: 0, left: 0, padding: '20px', background: 'linear-gradient(transparent, rgba(0,0,0,0.9))', color: 'white', borderBottom: '6px solid #17298d'}},
+              h('h2', {style: {margin: 0}}, title)
+            )
+          ),
+          h('div', {style: {marginTop: '20px'}}, this.props.widgetFor('body'))
+        );
+      }
+    });
+    CMS.registerPreviewTemplate("blog", PostPreview);
+    CMS.registerPreviewStyle("https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&display=swap");
+  </script>
+</body>
+</html>
