--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,8 +11,18 @@ collections:
     label: "כתבות"
     folder: "content/blog"
     create: true
+    slug: "{{slug}}"
     fields:
       - { label: "כותרת", name: "title", widget: "string" }
-      - { label: "תאריך", name: "date", widget: "datetime" }
-      - { label: "תמונה", name: "image", widget: "string" }
-      - { label: "גוף הכתבה", name: "body", widget: "markdown" }
+      - { 
+          label: "מיקום", 
+          name: "layout_position", 
+          widget: "select", 
+          options: [
+            { label: "ראשית", value: "top" },
+            { label: "ריבוע", value: "side" },
+            { label: "מבזק", value: "ticker" }
+          ] 
+        }
+      - { label: "תמונה (קישור)", name: "image", widget: "string", required: false }
+      - { label: "תוכן הכתבה", name: "body", widget: "markdown" }
