--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,8 @@ backend:
   branch: main
   auth_type: implicit
   app_id: Ov23liyj2fBKFhjXJGvj
+  # התיקון כאן: הוספת הקישור הישיר בצורה שהמערכת לא תנסה "להדביק" לו את כתובת האתר
+  auth_endpoint: https://github.com/login/oauth/authorize
 
 media_folder: "images"
 public_folder: "/images"
